--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,35 +3,126 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     </head>
     <body>
-        <h1>Hello World!</h1>
+
+      <!-- navegacao -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Bank</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#" id = "novoCliente">Novo Cliente</a></li>
+              <li><a href="#">Link</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Link</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+
+
+
+
+
+
+      <div id = "corpo">
+      </div>
+
     <script src = "js/app/models/Endereco.js"></script>
+    <script src = "js/app/views/CadastroClienteView.js"></script>
     <script>
-        let endereco = new Endereco();
-        endereco.rua = 'Sete de Abril';
-        endereco.numero = 1294;
-        endereco.complemento = 'Apto 606';
+        let cadastroClienteView = new CadastroClienteView('corpo');
 
-        let http = new XMLHttpRequest();
-        http.open('POST' , '/bank_lpoo/webresources/endereco');
-        http.setRequestHeader('Content-type' , "application/json");
+        document.querySelector('#novoCliente').onclick = function(event){
+          event.preventDefault();
+          cadastroClienteView.template();
+        }
 
-        http.onreadystatechange = () => {
-          if(http.readyState == 4){
-            if (http.status == 200) {
-              let dadosRecebidos = JSON.parse(http.responseText);
-              endereco = Object.assign(new Endereco(), dadosRecebidos);
-              console.log(endereco);
-            }else {
+        /*let btnCadastrar = document.querySelector('#btnCadastrar');
+        btnCadastrar.onclick = function(event){
+          event.preventDefault();
+          let endereco = new Endereco();
+          endereco.rua = document.querySelector('#rua').value;
+          endereco.numero = document.querySelector('#numero').value;
+          endereco.complemento = document.querySelector('#complemento').value;
 
+          let http = new XMLHttpRequest();
+          http.open('POST' , '/bank_lpoo/webresources/endereco');
+          http.setRequestHeader('Content-type' , "application/json");
+
+          http.onreadystatechange = () => {
+            if(http.readyState == 4){
+              if (http.status == 200) {
+                let dadosRecebidos = JSON.parse(http.responseText);
+                endereco = Object.assign(new Endereco(), dadosRecebidos);
+                alert('Endereco gravado !');
+              }else {
+                alert('Erro ao gravar endereco');
+              }
             }
           }
-        }
-        http.send(JSON.stringify(endereco));
-
-
-
+          http.send(JSON.stringify(endereco));
+        }*/
     </script>
+
+    <script>
+        /*let btnCarregar = document.querySelector('#carregar');
+        btnCarregar.onclick = function(event){
+          event.preventDefault();
+          let http = new XMLHttpRequest();
+          http.open('GET' , '/bank_lpoo/webresources/endereco');
+          http.setRequestHeader('Content-type' , "application/json");
+          http.onreadystatechange = () => {
+            if(http.readyState == 4){
+              if (http.status == 200) {
+                let dadosRecebidos = JSON.parse(http.responseText);
+                //endereco = Object.assign(new Endereco(), dadosRecebidos);
+                console.log(dadosRecebidos);
+                alert('Enderecos carregados !');
+              }else {
+                alert('Erro ao carregar enderecos');
+              }
+            }
+          }
+          http.send();
+        }*/
+    </script>
+
     </body>
 </html>
