--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#" id = "novoCliente">Novo Cliente</a></li>
+              <li class="active"><a href="#" id = "novoCliente" onclick="clienteController.exibeFormulario(event)">Novo Cliente</a></li>
               <li><a href="#">Link</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -65,9 +65,14 @@
       </div>
 
     <script src = "js/app/models/Endereco.js"></script>
+    <script src = "js/app/models/Cliente.js"></script>
     <script src = "js/app/views/CadastroClienteView.js"></script>
+    <script src = "js/app/services/ClienteService.js" charset="utf-8"></script>
+    <script src = "js/app/controllers/ClienteController.js"></script>
     <script>
-        let cadastroClienteView = new CadastroClienteView('corpo');
+        let clienteController = new ClienteController();
+
+        /*let cadastroClienteView = new CadastroClienteView('corpo');
 
         document.querySelector('#novoCliente').onclick = function(event){
           event.preventDefault();
