--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/buscaClientes.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
 
@@ -19,7 +20,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#" id = "novoCliente" onclick="clienteController.exibeFormulario(event)">Novo Cliente</a></li>
-              <li><a href="#">Link</a></li>
+              <li><a href="#">Clientes Cadastrados</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -62,6 +63,51 @@
 
 
       <div id = "corpo">
+
+          <form class="col-md-3">
+            <div class="form-group">
+              <input type="text" class="form-control formBuscaCliente" placeholder="Nome">
+              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
+            </div>
+          </form>
+
+          <form class="col-md-3">
+            <div class="form-group">
+              <input type="text" class="form-control formBuscaCliente" placeholder="Sobrenome">
+              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
+            </div>
+          </form>
+
+          <form class="col-md-3">
+            <div class="form-group">
+              <input type="text" class="form-control formBuscaCliente" placeholder="Rg">
+              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
+            </div>
+          </form>
+
+          <form class="col-md-3">
+            <div class="form-group">
+              <input type="text" class="form-control formBuscaCliente" placeholder="Cpf">
+              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
+            </div>
+          </form>
+
+          <div class="col-md-9 col-md-offset-1">
+            <table class="table table-striped table-hover table-bordered">
+              <thead class="info">
+                <th class = "active text-center" style = "width:22%;">Nome</th>
+                <th class = "active text-center" style = "width:22%;">Sobrenome</th>
+                <th class = "active text-center" style = "width:22%;">Rg</th>
+                <th class = "active text-center" style = "width:22%;">Cpf</th>.
+                <th class = "active text-center">Opcoes</th>
+              </thead>
+              <tbody>
+                
+              </tbody>
+            </table>
+          </div>
+
+
       </div>
 
     <script src = "js/app/models/Endereco.js"></script>
