--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/buscaClientes.css" media="screen" title="no title" charset="utf-8">
-    </head>
-    <body>
+  <head>
+      <title>Start Page</title>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/buscaClientes.css" media="screen" title="no title" charset="utf-8">
+  </head>
+  <body>
 
       <!-- navegacao -->
       <nav class="navbar navbar-default">
@@ -19,8 +19,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#" id = "novoCliente" onclick="clienteController.exibeFormulario(event)">Novo Cliente</a></li>
-              <li><a href="#">Clientes Cadastrados</a></li>
+              <li class="active"><a href="#" onclick="clienteController.exibeFormulario(event)">Novo Cliente</a></li>
+              <li><a href="#" onclick="clienteController.carregaClientes(event)">Clientes Cadastrados</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -64,116 +64,17 @@
 
       <div id = "corpo">
 
-          <form class="col-md-3">
-            <div class="form-group">
-              <input type="text" class="form-control formBuscaCliente" placeholder="Nome">
-              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
-            </div>
-          </form>
-
-          <form class="col-md-3">
-            <div class="form-group">
-              <input type="text" class="form-control formBuscaCliente" placeholder="Sobrenome">
-              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
-            </div>
-          </form>
-
-          <form class="col-md-3">
-            <div class="form-group">
-              <input type="text" class="form-control formBuscaCliente" placeholder="Rg">
-              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
-            </div>
-          </form>
-
-          <form class="col-md-3">
-            <div class="form-group">
-              <input type="text" class="form-control formBuscaCliente" placeholder="Cpf">
-              <button type="button" name="button" class = "btn btn-info"><span class = "glyphicon glyphicon-search"></span></button>
-            </div>
-          </form>
-
-          <div class="col-md-9 col-md-offset-1">
-            <table class="table table-striped table-hover table-bordered">
-              <thead class="info">
-                <th class = "active text-center" style = "width:22%;">Nome</th>
-                <th class = "active text-center" style = "width:22%;">Sobrenome</th>
-                <th class = "active text-center" style = "width:22%;">Rg</th>
-                <th class = "active text-center" style = "width:22%;">Cpf</th>.
-                <th class = "active text-center">Opcoes</th>
-              </thead>
-              <tbody>
-                
-              </tbody>
-            </table>
-          </div>
-
-
       </div>
 
     <script src = "js/app/models/Endereco.js"></script>
     <script src = "js/app/models/Cliente.js"></script>
+    <script src = "js/app/views/ClienteView.js"></script>
     <script src = "js/app/views/CadastroClienteView.js"></script>
-    <script src = "js/app/services/ClienteService.js" charset="utf-8"></script>
+    <script src = "js/app/views/ListaClientesView.js"></script>
+    <script src = "js/app/services/ClienteService.js"></script>
     <script src = "js/app/controllers/ClienteController.js"></script>
     <script>
         let clienteController = new ClienteController();
-
-        /*let cadastroClienteView = new CadastroClienteView('corpo');
-
-        document.querySelector('#novoCliente').onclick = function(event){
-          event.preventDefault();
-          cadastroClienteView.template();
-        }
-
-        /*let btnCadastrar = document.querySelector('#btnCadastrar');
-        btnCadastrar.onclick = function(event){
-          event.preventDefault();
-          let endereco = new Endereco();
-          endereco.rua = document.querySelector('#rua').value;
-          endereco.numero = document.querySelector('#numero').value;
-          endereco.complemento = document.querySelector('#complemento').value;
-
-          let http = new XMLHttpRequest();
-          http.open('POST' , '/bank_lpoo/webresources/endereco');
-          http.setRequestHeader('Content-type' , "application/json");
-
-          http.onreadystatechange = () => {
-            if(http.readyState == 4){
-              if (http.status == 200) {
-                let dadosRecebidos = JSON.parse(http.responseText);
-                endereco = Object.assign(new Endereco(), dadosRecebidos);
-                alert('Endereco gravado !');
-              }else {
-                alert('Erro ao gravar endereco');
-              }
-            }
-          }
-          http.send(JSON.stringify(endereco));
-        }*/
     </script>
-
-    <script>
-        /*let btnCarregar = document.querySelector('#carregar');
-        btnCarregar.onclick = function(event){
-          event.preventDefault();
-          let http = new XMLHttpRequest();
-          http.open('GET' , '/bank_lpoo/webresources/endereco');
-          http.setRequestHeader('Content-type' , "application/json");
-          http.onreadystatechange = () => {
-            if(http.readyState == 4){
-              if (http.status == 200) {
-                let dadosRecebidos = JSON.parse(http.responseText);
-                //endereco = Object.assign(new Endereco(), dadosRecebidos);
-                console.log(dadosRecebidos);
-                alert('Enderecos carregados !');
-              }else {
-                alert('Erro ao carregar enderecos');
-              }
-            }
-          }
-          http.send();
-        }*/
-    </script>
-
-    </body>
+  </body>
 </html>
