Concluida a busca de clientes por parte do nome

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,5 +76,14 @@
     <script>
         let clienteController = new ClienteController();
     </script>
+
+
+    <script>
+
+
+    
+    </script>
+
+
   </body>
 </html>
