Concluida a busca de cliente por id

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
       <title>Start Page</title>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/buscaClientes.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="css/listaClientes.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
 
@@ -81,7 +81,7 @@
     <script>
 
 
-    
+
     </script>
 
 
