Concluida edicao de cliente

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,6 +71,7 @@
     <script src = "js/app/views/ClienteView.js"></script>
     <script src = "js/app/views/CadastroClienteView.js"></script>
     <script src = "js/app/views/ListaClientesView.js"></script>
+    <script src = "js/app/views/EditaClienteView.js"></script>
     <script src = "js/app/services/ClienteService.js"></script>
     <script src = "js/app/controllers/ClienteController.js"></script>
     <script>
